Activation link and login not possible if account is not activated.